# protoproxy

./: .env.example  .gitignore  README.md  config.json  pyproject.toml
.github/workflows/: publish.yml
src/protoproxy/: __init__.py  main.py
src/protoproxy/modules/: auth.py  https_input.py  https_output.py  mcp_input.py  mcp_output.py  router.py  websocket_input.py  websocket_output.py
