[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protoproxy"
version = "0.0.3"
description = "Fast, lightweight protocol translation hub."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["protocol", "proxy", "translation", "mcp", "networking"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/geomux/protoproxy"
Repository = "https://github.com/geomux/protoproxy"

[tool.hatch.build.targets.wheel]
packages = ["src/protoproxy"]
